--- a/index-noskrollr.html
+++ b/index-noskrollr.html
@@ -9,14 +9,15 @@
 
 	<title>The New Snow White</title>
 
-	<link rel="stylesheet" type="text/css" href="styles/main.css" data-skrollr-stylesheet />
+	<link rel="stylesheet" type="text/css" href="styles/main-noskrollr.css" />
 	
 	<style>
 	  .static-page {
 	   width:768px; 
      height:1024px; 
 	   background: #fff; ; 
-	   position: relative}
+	   position: relative;
+	   }
 	</style>
 	
 </head>
@@ -40,7 +41,7 @@
 	 <span>
 	    <img class="tap-image" src="img/hand.png"></a>
       <img class="tap-image hidden" id="hand" src="img/hand-white.png"></a>
-      <a class="button img-button img-button-hand">yes</a>
+      <a class="button img-button" id="img-button-hand">yes</a>
       </span>
     <div class="story hidden" id="howto-story">
       <p>Tap on the a button to read the story.</p>
@@ -58,7 +59,7 @@
 	  <span>
 	    <img class="tap-image" src="img/snowwhite.png"></a>
       <img class="tap-image hidden" id="eyes" src="img/snowwhite-white.png"></a>
-      <a class="button img-button img-button-eyes">yes</a>
+      <a class="button img-button" id="img-button-eyes">yes</a>
       </span>
     <div class="story hidden" id="empty-story">
       <p>Once upon a time,</p>
@@ -94,7 +95,7 @@
 	 <span>
 	    <img class="tap-image" src="img/queen-white.png"></a>
       <img class="tap-image hidden" id="crown" src="img/queen.png"></a>
-      <a class="button img-button img-button-crown">yes</a>
+      <a class="button img-button" id="img-button-crown">yes</a>
       </span>	 
     <div class="story hidden" id="queen-story">
       <p>The new Queen was vain and cruel, as cold as the last was warm. She possessed a magic mirror 
@@ -120,7 +121,7 @@
     <span>
 	    <img class="tap-image" src="img/huntsman.png"></a>
       <img class="tap-image hidden" id="knife" src="img/huntsman-white.png"></a>
-      <a class="button img-button img-button img-button-knife">yes</a>
+      <a class="button img-button img-button" id="img-button-knife">yes</a>
       </span>	 
     <div class="story hidden" id="hunstman-story">
       <p>The servant obeyed and took Little Snow White to the forest to pick flowers. When they were far from 
@@ -144,7 +145,7 @@
     <span>
 	    <img class="tap-image" src="img/dwarves.png"></a>
       <img class="tap-image hidden" id="crowd" src="img/dwarves-white.png"></a>
-      <a class="button img-button img-button-crowd">yes</a>
+      <a class="button img-button" id="img-button-crowd">yes</a>
       </span>	      
     <div class="story hidden" id="dwarves-story">
       <p>Snow White fled into the woods, branches tearing at her dress and tears running down her face. Among 
@@ -213,7 +214,7 @@
     <span>
 	    <img class="tap-image" src="img/coffin-white.png"></a>
       <img class="tap-image hidden" id="death" src="img/coffin.png"></a>
-      <a class="button img-button img-button-death">yes</a>
+      <a class="button img-button" id="img-button-death">yes</a>
       </span>	
     <span>
       <div class="story hidden" id="prince-story">
@@ -281,12 +282,12 @@
 
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
-<script>  $('.img-button-hand').click(function() { $('#hand').toggle(); }); </script>
-<script>  $('.img-button-eyes').click(function() { $('#eyes').toggle(); }); </script>
-<script>  $('.img-button-crown').click(function() { $('#crown').toggle(); }); </script>
-<script>  $('.img-button-knife').click(function() { $('#knife').toggle(); }); </script>
-<script>  $('.img-button-crowd').click(function() { $('#crowd').toggle(); }); </script>
-<script>  $('.img-button-death').click(function() { $('#death').toggle(); }); </script>
+<script>  $('#img-button-hand').click(function() { $('#hand').toggle(); }); </script>
+<script>  $('#img-button-eyes').click(function() { $('#eyes').toggle(); }); </script>
+<script>  $('#img-button-crown').click(function() { $('#crown').toggle(); }); </script>
+<script>  $('#img-button-knife').click(function() { $('#knife').toggle(); }); </script>
+<script>  $('#img-button-crowd').click(function() { $('#crowd').toggle(); }); </script>
+<script>  $('#img-button-death').click(function() { $('#death').toggle(); }); </script>
 
 <script>
   $('#story-button').click(function() { 
