--- a/index-noskrollr.html
+++ b/index-noskrollr.html
@@ -41,7 +41,7 @@
 	 <span>
 	    <img class="tap-image" src="img/hand.png"></a>
       <img class="tap-image hidden" id="hand" src="img/hand-white.png"></a>
-      <a class="button img-button" id="img-button-hand">yes</a>
+      <a class="button img-button" id="img-button-hand"> </a>
       </span>
     <div class="story hidden" id="howto-story">
       <p>Tap on the a button to read the story.</p>
@@ -59,7 +59,7 @@
 	  <span>
 	    <img class="tap-image" src="img/snowwhite.png"></a>
       <img class="tap-image hidden" id="eyes" src="img/snowwhite-white.png"></a>
-      <a class="button img-button" id="img-button-eyes">yes</a>
+      <a class="button img-button" id="img-button-eyes"> </a>
       </span>
     <div class="story hidden" id="empty-story">
       <p>Once upon a time,</p>
@@ -95,7 +95,7 @@
 	 <span>
 	    <img class="tap-image" src="img/queen-white.png"></a>
       <img class="tap-image hidden" id="crown" src="img/queen.png"></a>
-      <a class="button img-button" id="img-button-crown">yes</a>
+      <a class="button img-button" id="img-button-crown"> </a>
       </span>	 
     <div class="story hidden" id="queen-story">
       <p>The new Queen was vain and cruel, as cold as the last was warm. She possessed a magic mirror 
@@ -121,7 +121,7 @@
     <span>
 	    <img class="tap-image" src="img/huntsman.png"></a>
       <img class="tap-image hidden" id="knife" src="img/huntsman-white.png"></a>
-      <a class="button img-button img-button" id="img-button-knife">yes</a>
+      <a class="button img-button img-button" id="img-button-knife"> </a>
       </span>	 
     <div class="story hidden" id="hunstman-story">
       <p>The servant obeyed and took Little Snow White to the forest to pick flowers. When they were far from 
@@ -145,7 +145,7 @@
     <span>
 	    <img class="tap-image" src="img/dwarves.png"></a>
       <img class="tap-image hidden" id="crowd" src="img/dwarves-white.png"></a>
-      <a class="button img-button" id="img-button-crowd">yes</a>
+      <a class="button img-button" id="img-button-crowd"> </a>
       </span>	      
     <div class="story hidden" id="dwarves-story">
       <p>Snow White fled into the woods, branches tearing at her dress and tears running down her face. Among 
@@ -214,7 +214,7 @@
     <span>
 	    <img class="tap-image" src="img/coffin-white.png"></a>
       <img class="tap-image hidden" id="death" src="img/coffin.png"></a>
-      <a class="button img-button" id="img-button-death">yes</a>
+      <a class="button img-button" id="img-button-death"> </a>
       </span>	
     <span>
       <div class="story hidden" id="prince-story">
