--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	 <span>
 	    <img class="tap-image" src="img/hand-white.png"></a>
       <img class="tap-image hidden" id="hand" src="img/hand.png"></a>
-      <a class="button img-button img-button-hand">yes</a>
+      <a class="button img-button" id="img-button-hand"></a>
       </span>
     <div class="story hidden" id="howto-story">
       <p>Tap on the a button to read the story.</p>
@@ -41,7 +41,7 @@
 	  <span>
 	    <img class="tap-image" src="img/snowwhite-white.png"></a>
       <img class="tap-image hidden" id="eyes" src="img/snowwhite.png"></a>
-      <a class="button img-button img-button-eyes">yes</a>
+      <a class="button img-button" id="img-button-eyes"></a>
       </span>
     <div class="story hidden" id="empty-story">
       <p>Once upon a time,</p>
@@ -51,7 +51,7 @@
 	    
   <div id="mother" class="page">
 	  <h2>MOTHERHOOD IS HELL</h2>
-	  <img class="cutout" src="img/hand.png">
+<!-- 	  <img class="cutout" src="img/hand.png"> -->
     <div class="story hidden" id="mother-story">
       <p>one winter's morning, a young Queen was sewing by her window. As she looked out on the snow, 
       she pricked her finger and shed three drops of blood. Taken by the sight, she wished for a 
@@ -67,7 +67,7 @@
 	 <span>
 	    <img class="tap-image" src="img/queen.png"></a>
       <img class="tap-image hidden" id="crown" src="img/queen-white.png"></a>
-      <a class="button img-button img-button-crown">yes</a>
+      <a class="button img-button" id="img-button-crown"></a>
       </span>	 
     <div class="story hidden" id="queen-story">
       <p>The new Queen was vain and cruel, as cold as the last was warm. She possessed a magic mirror 
@@ -88,7 +88,7 @@
     <span>
 	    <img class="tap-image" src="img/hunstman-white.png"></a>
       <img class="tap-image hidden" id="knife" src="img/hunstman.png"></a>
-      <a class="button img-button img-button img-button-knife">yes</a>
+      <a class="button img-button img-button" id="img-button-knife"></a>
       </span>	 
     <div class="story hidden" id="hunstman-story">
       <p>The servant obeyed and took Little Snow White to the forest to pick flowers. When they were far from 
@@ -107,7 +107,7 @@
     <span>
 	    <img class="tap-image" src="img/dwarves-white.png"></a>
       <img class="tap-image hidden" id="crowd" src="img/dwarves.png"></a>
-      <a class="button img-button img-button-crowd">yes</a>
+      <a class="button img-button" id="img-button-crowd"></a>
       </span>	      
     <div class="story hidden" id="dwarves-story">
       <p>Snow White fled into the woods, branches tearing at her dress and tears running down her face. Among 
@@ -125,7 +125,7 @@
 	  
   <div id="king" class="page">
 	  <h2>The King is absent.</h2>
-	  <img class="cutout" src="img/king.png">
+	  <!-- <img class="cutout" src="img/king.png"> -->
     <div class="story hidden" id="king-story">
       <p>Indeed, the next time the Queen stood before her mirror, her blood ran cold. She remained in the 
       shadow of Little Snow White, the fairest in all the land. The mirror told the Queen of the house in 
@@ -145,7 +145,7 @@
 	  
   <div id="sin" class="page">
     <h2>ORIGINAL SIN</h2>
-    <img class="cutout" src="img/hand.png">
+<!--     <img class="cutout" src="img/hand.png"> -->
     <div class="story hidden" id="sin-story">
       <p>The Queen was not stopped. The third time she returned with an apple, pure and white on one side and 
       luscious and red on the other. When Snow White took a bite from the red side, the poisoned chunk was 
@@ -161,7 +161,7 @@
     <span>
 	    <img class="tap-image" src="img/coffin-white.png"></a>
       <img class="tap-image hidden" id="death" src="img/coffin.png"></a>
-      <a class="button img-button img-button-death">yes</a>
+      <a class="button img-button" id="img-button-death"></a>
       </span>	
     <span>
       <div class="story hidden" id="prince-story">
@@ -182,7 +182,7 @@
 	  
   <div id="love" class="page">
 	  <h2>Love's a bitch.</h2>
-	  <img class="cutout" src="img/hand.png">
+<!-- 	  <img class="cutout" src="img/hand.png"> -->
     <span>
       <div class="story hidden" id="love-story">
         <p>Overjoyed and deeply in love, Snow White agreed to stay in the castle and become Queen. When the old 
@@ -239,12 +239,12 @@
 </script>
 -->
 
-<script>  $('.img-button-hand').click(function() { $('#hand').toggle(); }); </script>
-<script>  $('.img-button-eyes').click(function() { $('#eyes').toggle(); }); </script>
-<script>  $('.img-button-crown').click(function() { $('#crown').toggle(); }); </script>
-<script>  $('.img-button-knife').click(function() { $('#knife').toggle(); }); </script>
-<script>  $('.img-button-crowd').click(function() { $('#crowd').toggle(); }); </script>
-<script>  $('.img-button-death').click(function() { $('#death').toggle(); }); </script>
+<script>  $('#img-button-hand').click(function() { $('#hand').toggle(); }); </script>
+<script>  $('#img-button-eyes').click(function() { $('#eyes').toggle(); }); </script>
+<script>  $('#img-button-crown').click(function() { $('#crown').toggle(); }); </script>
+<script>  $('#img-button-knife').click(function() { $('#knife').toggle(); }); </script>
+<script>  $('#img-button-crowd').click(function() { $('#crowd').toggle(); }); </script>
+<script>  $('#img-button-death').click(function() { $('#death').toggle(); }); </script>
 
 <script>
   $('#story-button').click(function() { 
